# provenance

./: Cargo.toml  KEYCLOAK_PIC_SPI_SPEC.md  README.md
crates/provenance-bridge/: Cargo.toml
crates/provenance-bridge/src/: bridge.rs  error.rs  lib.rs  types.rs
crates/provenance-bridge/src/handlers/: apikey.rs  jwt.rs  mock.rs  mod.rs
crates/provenance-core/: Cargo.toml
crates/provenance-core/src/: crypto.rs  error.rs  lib.rs  operation.rs  pca.rs  poc.rs  types.rs
crates/provenance-core/tests/: cross_language.rs  properties.rs
crates/provenance-plane/: Cargo.toml
crates/provenance-plane/src/: lib.rs  main.rs
crates/provenance-plane/src/api/: error.rs  mod.rs
crates/provenance-plane/src/api/handlers/: federation.rs  issue.rs  keys.rs  mod.rs  process.rs
crates/provenance-plane/src/core/: mod.rs  validation.rs
crates/provenance-plane/src/keys/: mod.rs  registry.rs
crates/provenance-plane/src/storage/: memory.rs  mod.rs  postgres.rs
crates/provenance-plane/tests/: attacks.rs  integration.rs  token_exchange.rs
deploy/docker/: Dockerfile  docker-compose.standalone.yml  docker-compose.yml
examples/01-microservice-chain/: demo.sh  package-lock.json  package.json
examples/01-microservice-chain/archive/: package.json
examples/01-microservice-chain/archive/src/: index.ts
examples/01-microservice-chain/gateway/: package.json
examples/01-microservice-chain/gateway/src/: index.ts
examples/01-microservice-chain/storage/: package.json
examples/01-microservice-chain/storage/src/: index.ts
examples/02-ai-agent-insurance/: README.md  demo.sh  package-lock.json  package.json
examples/02-ai-agent-insurance/agent/: package.json
examples/02-ai-agent-insurance/agent/src/: index.ts
examples/02-ai-agent-insurance/claims-service/: package.json
examples/02-ai-agent-insurance/claims-service/src/: index.ts
examples/02-ai-agent-insurance/gateway/: package.json
examples/02-ai-agent-insurance/gateway/src/: index.ts
examples/03-keycloak-oauth-exchange/: README.md  demo.sh  docker-compose.keycloak.yml  package-lock.json  package.json
examples/03-keycloak-oauth-exchange/keycloak/: realm-export.json
examples/03-keycloak-oauth-exchange/keycloak-gateway/: Dockerfile  package.json
examples/03-keycloak-oauth-exchange/keycloak-gateway/src/: index.ts
examples/03-keycloak-oauth-exchange/resource-api/: Dockerfile  package.json
examples/03-keycloak-oauth-exchange/resource-api/src/: index.ts
examples/04-kafka-authority/: demo.sh  package-lock.json  package.json
examples/04-kafka-authority/broker-simulator/: package.json
examples/04-kafka-authority/broker-simulator/src/: index.ts
examples/04-kafka-authority/consumer/: package.json
examples/04-kafka-authority/consumer/src/: index.ts
examples/04-kafka-authority/producer/: package.json
examples/04-kafka-authority/producer/src/: index.ts
examples/05-federation/: README.md  demo.sh
examples/06-keycloak-pic-spi/: README.md  demo.sh  docker-compose.yml
examples/06-keycloak-pic-spi/keycloak/: realm-export.json
keycloak-pic-spi/: Dockerfile  pom.xml
keycloak-pic-spi/src/main/java/com/provenance/keycloak/pic/: PicConstants.java
keycloak-pic-spi/src/main/java/com/provenance/keycloak/pic/admin/: PicAdminResource.java  PicAdminResourceProvider.java  PicAdminResourceProviderFactory.java
keycloak-pic-spi/src/main/java/com/provenance/keycloak/pic/audit/: PicAuditEvent.java  PicEventListenerProvider.java  PicEventListenerProviderFactory.java
keycloak-pic-spi/src/main/java/com/provenance/keycloak/pic/exchange/: OpsResolver.java  PicExchangeException.java  PicTokenExchangeProvider.java  PicTokenExchangeProviderFactory.java  PrincipalExtractor.java
keycloak-pic-spi/src/main/java/com/provenance/keycloak/pic/mapper/: PicOpsProtocolMapper.java
keycloak-pic-spi/src/main/java/com/provenance/keycloak/pic/model/: PicChainEntry.java  PicProvenanceClaim.java  (+1 more)
sdks/typescript/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/typescript/src/: client.test.ts  client.ts  crypto.test.ts  crypto.ts  index.ts  poc-builder.test.ts  poc-builder.ts  types.test.ts  types.ts
sdks/typescript/src/middleware/: express.ts  index.ts
(+7 files in other folders)
