[package]
name = "provenance-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core PCA/PoC types and cryptographic primitives for the Provenance trust framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
coset = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
