[package]
name = "provenance-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trust Plane server for PIC authority chain management"

[features]
default = []
postgres = ["sqlx"]
federation = ["reqwest"]

[dependencies]
provenance-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { version = "1.0", features = ["v4"] }

# Database (optional, for federation)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json"], optional = true }

# HTTP client (for federation discovery)
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "provenance-plane"
path = "src/main.rs"
